[metadata]
name = omniconf
author = Nick Douma
author-email = n.douma@nekoconeko.nl
summary = A Python library that makes configuring your application independent from your configuration backend.
description-file = README.rst
home-page = https://github.com/cyso/omniconf
license = LGPLv3
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: Jython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces
    Topic :: System :: Installation/Setup
    Topic :: Utilities
keywords =
    omniconf
    config
    configuration

[extras]
configobj =
    configobj
vault =
    requests<2.12.0:platform.python_implementation=='Jython'
    hvac
yaml =
    PyYAML
toml =
    toml

[nosetests]
verbosity=2
nocapture=1
detailed-errors=0

tests=omniconf

with-coverage=1
cover-erase=1
cover-xml=1
cover-html=1
cover-package=omniconf

with-xunit=1

[flake8]
ignore = E126

[bdist_wheel]
universal=1
